# token-trackr

./: Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  scheduled-tasks.yml
alembic/: env.py
alembic/versions/: 20241220_000001_initial_schema.py
backend/: __init__.py  config.py  database.py  main.py
backend/api/: __init__.py  router.py
backend/api/endpoints/: __init__.py  health.py  providers.py  tenants.py  usage.py
backend/core/: __init__.py  pricing.py
backend/jobs/: __init__.py  aggregation.py  reports.py  scheduler.py
backend/models/: __init__.py  base.py  usage.py
backend/schemas/: __init__.py  usage.py
backend/services/: __init__.py  usage.py
config/: pricing.yaml
deploy/kubernetes/: configmap.yaml  cronjob.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/vm/: install.sh  token-trackr-api.service  token-trackr-worker.service  token-trackr.env  uninstall.sh
sdk/nodejs/: package-lock.json
sdk/nodejs/src/: client.ts  index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/token_trackr/: __init__.py  client.py  config.py  metadata.py  models.py
sdk/python/src/token_trackr/wrappers/: __init__.py  azure.py  bedrock.py  gemini.py
tests/: __init__.py  conftest.py  test_api.py  test_pricing.py
