[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-trackr"
version = "1.0.0"
description = "Multi-tenant SaaS platform for tracking LLM token consumption across AWS Bedrock, Azure OpenAI, and Google Gemini"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Token Trackr Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.1",
    "httpx>=0.25.2",
    "aiohttp>=3.9.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "boto3>=1.33.0",
    "openai>=1.3.0",
    "google-generativeai>=0.3.0",
    "apscheduler>=3.10.4",
    "pyyaml>=6.0.1",
    "structlog>=23.2.0",
    "tenacity>=8.2.3",
    "prometheus-client>=0.19.0",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
token-trackr = "backend.main:run"
token-trackr-worker = "backend.jobs.scheduler:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "sdk*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends pattern)
    "N803",  # Argument name should be lowercase (needed for AWS Bedrock API compatibility)
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

